--- a/galeria.html
+++ b/galeria.html
@@ -65,7 +65,7 @@
 
           <div class="mySlides fade">
             <div class="num-img ">6 / 6</div>
-            <img src="imagens/banner5.jpg" style="width:100%" alt="Silvester Stallone no Falcão - O Campeão dos Campeões" title="Falcão - O Campeão dos Campeões">
+            <img src="imagens/banner5.jpg" style="width:100%" alt="Silvester Stallone no Filme Falcão - O Campeão dos Campeões" title="Falcão - O Campeão dos Campeões">
             <div class="texto">Filme Falcão - O Campeão dos Campeões</div>
           </div>
                   
