up trabalho final

--- a/filmografia.html
+++ b/filmografia.html
@@ -7,7 +7,7 @@
     <link href="src/style.css" rel="stylesheet" type="text/css">
     <link href="src/nav.css" rel="stylesheet" type="text/css">
     <link href="src/footer.css" rel="stylesheet" type="text/css">
-    <link href="src/table.css" rel="stylesheet" type="text/css">
+    <link href="src/filmografia.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="imagens/icon.jpg" type="image/jpg">
   </head>
   <body>
@@ -17,6 +17,7 @@
         <li><a href="index.html">Página Inicial</a></li>
         <li><a href="filmografia.html" class="active">Filmografia</a></li>
         <li><a href="galeria.html">Galeria</a></li>
+        <li><a href="premios.html">Prêmios e Indicações</a></li>
       </ul> 
       <div id="container-menu">
         <input type="checkbox" id="cb-menu" onclick="menu()">
