--- a/galeria.html
+++ b/galeria.html
@@ -17,6 +17,7 @@
         <li><a href="index.html">Página Inicial</a></li>
         <li><a href="filmografia.html">Filmografia</a></li>
         <li><a href="galeria.html" class="active">Galeria</a></li>
+        <li><a href="premios.html">Prêmios e Indicações</a></li>
       </ul> 
       <div id="container-menu">
         <input type="checkbox" id="cb-menu" onclick="menu()">
