--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <li><a href="index.html" class="active">Página Inicial</a></li>
         <li><a href="filmografia.html">Filmografia</a></li>
         <li><a href="galeria.html">Galeria</a></li>
+        <li><a href="premios.html">Prêmios e Indicações</a></li>
       </ul> 
       <div id="container-menu">
         <input type="checkbox" id="cb-menu" onclick="menu()">
