--- a/premios.html
+++ b/premios.html
@@ -607,7 +607,7 @@
     </article>
     <footer>
       <div>
-        <a href="premio.html" class="a-fot">Voltar ao topo</a>
+        <a href="premios.html" class="a-fot">Voltar ao topo</a>
       </div>
       <div>
         ©2021 <a href="https://www.facebook.com/ForcetechJr" target="_blank">Forcetech Jr.</a>
