--- a/galeria.html
+++ b/galeria.html
@@ -1,14 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>Galeria Sylvester Stallone</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="src/style.css" rel="stylesheet" type="text/css">
     <link href="src/nav.css" rel="stylesheet" type="text/css">
-    <link href="src/slide.css" rel="stylesheet" type="text/css">
+    <link href="src/galeria.css" rel="stylesheet" type="text/css">
     <link href="src/footer.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="imagens/icon.jpg" type="image/jpg">
+    <script type="text/javascript">
+      // trigger a resize event once the window is loaded, it refresh the Flickity slider on resize
+      window.onload = function(){
+      window.dispatchEvent(new Event('resize'));
+      }
+    </script>
   </head>
   <body>
     <nav id="menu-bar">
@@ -18,10 +24,11 @@
         <li><a href="filmografia.html">Filmografia</a></li>
         <li><a href="galeria.html" class="active">Galeria</a></li>
         <li><a href="premios.html">Prêmios e Indicações</a></li>
+        <li><a href="avaliacao.html">Avaliações de Filmes</a></li>
       </ul> 
       <div id="container-menu">
         <input type="checkbox" id="cb-menu" onclick="menu()">
-          <label for="cb-menu">
+        <label class="label-menu" for="cb-menu">
             <span></span>
             <span></span>
             <span></span>
@@ -85,20 +92,32 @@
       </section>          
     </article>
     <footer>
-      <div>
-        <a href="galeria.html" class="a-fot">Voltar ao topo</a>
-      </div>
-      <div>
-        ©2021 <a href="https://www.facebook.com/ForcetechJr" target="_blank">Forcetech Jr.</a>
-      </div>
-      <div>
+      <section id="f-line1">
+        <div id="f-left">
+          <p class="f-destaque"><a href="index.html">Início</a></p>
+          <p><a href="galeria.html">Galeria</a></p>
+        </div>
+        <div id="f-center">
+          <p class="f-destaque"> <a href="filmografia.html">Filmografia</a></p>
+          <p><a href="premios.html">Prêmios e Indicações</a></p>
+          <p><a href="avaliacao.html">Avaliações de Filmes</a></p>
+        </div>
+        <div id="f-right">
+          <p class="f-destaque"><a href="#">Voltar ao Topo</a></p>
+        </div>
+      </section>
+      <section id="f-line2">
+        <div id="f-bottom">
+          ©2021 
+          <a href="https://www.facebook.com/ForcetechJr" target="_blank">Forcetech Jr. Soluções.</a>
           Desenvolvido por: 
-          <a href="https://github.com/igor2501/" target="_blank">Igor Przybysz</a> 
-          e 
           <a href="https://github.com/ALeBRAnTE/" target="_blank">Lucas Alebrante</a>
-      </div>
+          e 
+          <a href="https://github.com/igor2501/" target="_blank">Igor Przybysz</a>
+        </div>
+      </section>
     </footer>
-    <script src="src/nav.js"></script>
-    <script src="src/slide.js"></script>
+    <script src="js/nav.js"></script>
+    <script src="js/slide.js"></script>
   </body>
 </html>
