--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
   <head>
     <title>Sylvester Stallone</title>
     <meta charset="UTF-8">
@@ -8,6 +8,12 @@
     <link href="src/nav.css" rel="stylesheet" type="text/css">
     <link href="src/footer.css" rel="stylesheet" type="text/css">
     <link rel="icon" href="imagens/icon.jpg" type="image/jpg">
+    <script type="text/javascript">
+      // trigger a resize event once the window is loaded, it refresh the Flickity slider on resize
+      window.onload = function(){
+      window.dispatchEvent(new Event('resize'));
+      }
+    </script>
   </head>
   <body>
     <nav id="menu-bar">
@@ -17,10 +23,11 @@
         <li><a href="filmografia.html">Filmografia</a></li>
         <li><a href="galeria.html">Galeria</a></li>
         <li><a href="premios.html">Prêmios e Indicações</a></li>
+        <li><a href="avaliacao.html">Avaliações de Filmes</a></li>
       </ul> 
       <div id="container-menu">
         <input type="checkbox" id="cb-menu" onclick="menu()">
-        <label for="cb-menu">
+        <label class="label-menu" for="cb-menu">
           <span></span>
           <span></span>
           <span></span>
@@ -32,15 +39,14 @@
         <h1 class="mt-3 text-center anton-font">Sylvester Stallone</h1>
       </header>
       <section class="text-justify oswald-font">
-
           <h3 class="mt-3 anton-font">Biografia de Sylvester Stallone</h3>
-          <b> Gardenzio Stallone</b> é conhecido do grande público apenas pelo primeiro e último nome.
+          <strong> Gardenzio Stallone</strong> é conhecido do grande público apenas pelo primeiro e último nome.
           O ator também trabalha como roteirista, diretor e produtor.Entre os seus papéis principais
-          estão <i>Rocky Balboa</i> e <i>John Rambo</i>. Sylvester Stallone nasceu em Nova Iorque (Estados Unidos)
+          estão <em>Rocky Balboa</em> e <em>John Rambo</em>. Sylvester Stallone nasceu em Nova Iorque (Estados Unidos)
           no dia 6 de julho de 1946.
-
+          
           <h3 class="mt-2 anton-font">Infância</h3>
-          Quando <b>Sylvester</b> nasceu, fruto de um parto complicado, a equipe usou um fórceps, que deixou consequências
+          Quando <strong>Sylvester</strong> nasceu, fruto de um parto complicado, a equipe usou um fórceps, que deixou consequências
           para o resto da vida do ator pois danificou um nervo em sua face.<br>
           Os pais do artista tinham uma relação bastante complicada, o que afetou a infância de Sylvester
           e do seu irmão Frank.<br>
@@ -54,31 +60,36 @@
             Em 1970 estreou em um filme adulto chamado The Italian Stallion.
             Também começou a aparecer em alguns filmes de Woody Allen até ganhar
             um papel de fato no filme Juventude à solta (1974).
-
-              <div class="mlr-3 mt-1 oswald-font">
+            <div class="container-grid">
+              <div class="mlr-1 mt-2 oswald-font grid-item">
                 <h5 class="anton-font">Rocky</h5>
                 <figure >
-                  <img src="imagens/ROKY.jpg" alt="Imagem filme Roky 1" title="Imagem filme Roky" class="col-img mlr-1">
+                  <img src="imagens/rocky.jpg" alt="Imagem filme Roky 1" title="Imagem filme Roky" class="col-img">
                   <figcaption>Imagem filme Roky.</figcaption>
                 </figure>
+                <p>
                 Uma luta entre Muhammad Ali e Chuck Wepner inspirou Stallone a escrever o roteiro de Rocky.
                 A condição colocada pelo artista foi que ele também interpretasse o papel do protagonista.
                 RockySylvester Stallone deu vida ao personagem Rocky
                 O filme foi um sucesso de público durante o ano de 1976, tanto que rendeu diversas sequências
                 (Rocky II, Rocky III, Rocky IV, Rocky V, Rocky Balboa, Creed e Creed II).
+                </p>
               </div>
 
-              <div class="mt-1 oswald-font mlr-3">
+              <div class="mt-2 oswald-font mlr-1 grid-item">
                 <h5 class="anton-font">Rambo</h5>
                 <figure>
-                  <img src="imagens/Rambo.jpg" alt="Imagem filme Rambo 1" title="Imagem filme Rambo" class="col-img mlr-1">
+                  <img src="imagens/Rambo.jpg" alt="Imagem filme Rambo 1" title="Imagem filme Rambo" class="col-img">
                   <figcaption>Imagem filme Rambo.</figcaption>
                 </figure>
+                <p>
                 Stallone também é o rosto (e o texto) por trás da série de filmes com o personagem John Rambo.
                 O primeiro longa-metragem (First Blood) saiu em 1982.
                 Depois do sucesso do primeiro filme, vieram Rambo II (1982), Rambo III (1985), 
                 Rambo IV (2008) e Rambo V (2019).
+                </p>
               </div>
+            </div>
           </div>
           <div class="mlr-2 mt-2 oswald-font">                 
             <h4 class="anton-font">Outras produções</h4>
@@ -103,19 +114,31 @@
       </section>      
     </article>
     <footer>
-      <div>
-        <a href="index.html" class="a-fot">Voltar ao topo</a>
-      </div>
-      <div>
-        ©2021 <a href="https://www.facebook.com/ForcetechJr" target="_blank">Forcetech Jr.</a>
-      </div>
-      <div>
-        Desenvolvido por: 
-        <a href="https://github.com/igor2501/" target="_blank">Igor Przybysz</a> 
-        e 
-        <a href="https://github.com/ALeBRAnTE/" target="_blank">Lucas Alebrante</a>
-      </div>
+      <section id="f-line1">
+        <div id="f-left">
+          <p class="f-destaque"><a href="index.html">Início</a></p>
+          <p><a href="galeria.html">Galeria</a></p>
+        </div>
+        <div id="f-center">
+          <p class="f-destaque"> <a href="filmografia.html">Filmografia</a></p>
+          <p><a href="premios.html">Prêmios e Indicações</a></p>
+          <p><a href="avaliacao.html">Avaliações de Filmes</a></p>
+        </div>
+        <div id="f-right">
+          <p class="f-destaque"><a href="#">Voltar ao Topo</a></p>
+        </div>
+      </section>
+      <section id="f-line2">
+        <div id="f-bottom">
+          ©2021 
+          <a href="https://www.facebook.com/ForcetechJr" target="_blank">Forcetech Jr. Soluções.</a>
+          Desenvolvido por: 
+          <a href="https://github.com/ALeBRAnTE/" target="_blank">Lucas Alebrante</a>
+          e 
+          <a href="https://github.com/igor2501/" target="_blank">Igor Przybysz</a>
+        </div>
+      </section>
     </footer>
-    <script src="src/nav.js"></script>
+    <script src="js/nav.js"></script>
   </body>
 </html>
