--- a/Marvel/index.html
+++ b/Marvel/index.html
@@ -4,27 +4,66 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    <link rel="icon" type="image/png" href="src/marvel.png"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="styles/style.css" type="text/css" charset="UTF-8">
+    <title>Marvel</title>
 </head>
 <body>
+    
+    <nav class="navbar navbar-expand-lg navbar-dark ">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="#">MARVEL API</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Apresentar</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Ordenar A -> Z</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#" tabindex="-1" aria-disabled="true">Ordenar Z -> A</a>
+                </li>
+            </ul>
+            <form class="d-flex">
+                <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-success" type="submit">Search</button>
+            </form>
+            </div>
+        </div>
+    </nav>
+
+    <article>
+
+    </article>
+
+    <footer>
+        <div class="container-fluid py-3">
+        <div class="row">
+          <div class="col-4">
+            <ul class="nav flex-column">
+              <li><b>Desenvolvido Por:</b></li>
+              <li><a href="https://www.linkedin.com/in/alebrante/" target="blank">Lucas Ruan B. Alebrante</a></li>
+            </ul>
+          </div>
+          <div class="col-8">
+            <p>
+                Site desenvolvido para obtenção de nota parcial na matéria de Programação WEB II do 6<sup>o</sup> Semestre do curso Tecnologia em Análise e Desenvolvimento do Instituto Federal do Paraná - Campus União da Vitória 
+            </p>  
+          </div>
+        </div>
+        </div>
+        <div class="text-center footer-bottom" >
+          &copy 2022 Copyright: <a href="">Forcetech Jr. Soluções</a>
+        </div>
+      </footer>
     
 </body>
 </html>
 
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/4.0.0/core.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/crypto-js/3.1.9-1/md5.js"></script>
-<script>
-   var hash = CryptoJS.MD5("Message");
-   alert(hash);
-</script>
-
-public key
-e6440e07f44fc8f14d86ee8aae775443
-
-private key
-de5326c223927bcf337ad95a0a7bc692c2a725b5
-
-
-
-https://gateway.marvel.com:443/v1/public/characters?apikey=e6440e07f44fc8f14d86ee8aae775443
