--- a/Harry Potter/index.html
+++ b/Harry Potter/index.html
@@ -88,8 +88,8 @@
             </div>
         </div>
     </nav>
-    <article class="container mt-3 mb-5 tabela">
-        <section>
+    <article class="container mt-3 mb-5">
+        <section class="row">
             
         </section>
         
