--- a/Harry Potter/index.html
+++ b/Harry Potter/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Harry Poter API</title>
+    <title>Harry Potter API</title>
     <link rel="icon" type="image/png" href="src/HP.png" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
@@ -27,7 +27,7 @@
                     <img src="https://img.icons8.com/color/100/000000/deathly-hallows.png" />
                 </div>
                 <div class="col-6">
-                    <h1>Harry Poter API</h1>
+                    <h1>Harry Potter API</h1>
                 </div>
                 <div class="col-3 imgtopo"><img src="https://img.icons8.com/plasticine/100/000000/harry-potter.png" />
                 </div>
